k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-notes
  labels:
    app: django-notes
    environment: dev
