k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-notes
  namespace: django-notes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-notes
  template:
    metadata:
      labels:
        app: django-notes
    spec:
      containers:
      - name: django-notes
        image: 071785597559.dkr.ecr.ap-south-1.amazonaws.com/notesapp-dev-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15
