k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notesapp-frontend-service
  namespace: django-notes
spec:
  type: LoadBalancer

  selector:
    app: notesapp-frontend

  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
